fixed spacing with ad area

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,10 @@ a {
 
 .header {
   max-width: 950px;
-  margin: 100px auto auto auto;
+  margin: auto auto auto auto;
+}
+.margin-top {
+  margin-top: 100px;
 }
 
 a:hover {
@@ -133,16 +136,16 @@ p {
 }
 .main {
   width: 100%;
-  max-width: 1000px;
-  margin: 0px auto auto auto;
+  max-width: 950px;
+  margin: auto auto auto auto;
 }
 .grid-wrapper {
   display: grid;
-  grid-template-columns: 33% 34% 33%;
+  grid-template-columns: 33% 33% 33%;
   grid-template-rows: auto auto;
-  grid-gap: 10px;
-  width: 95%;
-  max-width: 1000px;
+  grid-gap: 0px;
+  width: 100%;
+  max-width: 950px;
 
 }
 .story {
@@ -153,6 +156,7 @@ p {
   grid-column: 3 / 4;
   grid-row: 1/3;
   background-color: #eaeaea;
+  margin: 30px 0px 0px 10px;
 }
 
 .feat {
@@ -320,6 +324,12 @@ body,
 }
 
 }
+@media screen and (max-width: 770px) {
+  .header {
+    max-width: 500px;
+  }
+}
+
 @media screen and (max-width: 500px) {
   #frsklogo {
     margin-left: 0px;
